// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodaysWindows captures the normal clean-day compact summary hierarchy 1`] = `
<div>
  <div>
    <div
      class="mb-3 flex items-center justify-between"
    >
      <h2
        class="flex items-center gap-1.5 font-heading text-lg font-semibold text-white"
      >
        Today's Windows
        <svg
          class="lucide lucide-info h-3.5 w-3.5 cursor-help text-muted-foreground"
          data-state="closed"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </h2>
    </div>
    <div
      class="noise-texture rounded-xl border border-[#404C92] bg-[#2D357D] p-5"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="rounded-lg p-1"
        >
          <div
            class="flex items-center gap-3"
          >
            <span
              class="w-12 shrink-0 font-heading text-sm font-bold text-[#FDB84B]"
            >
              6am
            </span>
            <div
              class="relative flex min-w-0 flex-1 items-center h-7 overflow-hidden"
            >
              <div
                class="absolute inset-y-0 left-0 rounded-md bg-success/30 shadow-[0_0_12px_rgba(34,197,94,0.15)]"
                style="width: 86%;"
              />
              <span
                class="relative z-10 min-w-0 truncate px-2 text-xs font-semibold text-white"
              >
                Clean early
              </span>
              <span
                class="relative z-10 ml-auto hidden gap-2 px-2 text-[10px] leading-tight text-medium/50 whitespace-nowrap sm:flex"
              >
                <span>
                  Wind E 4 mph
                </span>
                <span>
                  Swell W @ 12s
                </span>
                <span>
                  Tide 2.8 ft Incoming
                </span>
              </span>
            </div>
            <span
              class="w-16 shrink-0 whitespace-nowrap text-right text-sm font-semibold text-high flex items-center"
              data-testid="primary-wave-height"
            >
              3-4 ft
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TodaysWindows captures tide-sensitive windows with tide visible in the first summary layer 1`] = `
<div>
  <div>
    <div
      class="mb-3 flex items-center justify-between"
    >
      <h2
        class="flex items-center gap-1.5 font-heading text-lg font-semibold text-white"
      >
        Today's Windows
        <svg
          class="lucide lucide-info h-3.5 w-3.5 cursor-help text-muted-foreground"
          data-state="closed"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </h2>
    </div>
    <div
      class="noise-texture rounded-xl border border-[#404C92] bg-[#2D357D] p-5"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="rounded-lg p-1"
        >
          <div
            class="flex items-center gap-3"
          >
            <span
              class="w-12 shrink-0 font-heading text-sm font-bold text-[#FDB84B]"
            >
              10am
            </span>
            <div
              class="relative flex min-w-0 flex-1 items-center h-7 overflow-hidden"
            >
              <div
                class="absolute inset-y-0 left-0 rounded-md bg-success/30 shadow-[0_0_12px_rgba(34,197,94,0.15)]"
                style="width: 74%;"
              />
              <span
                class="relative z-10 min-w-0 truncate px-2 text-xs font-semibold text-white"
              >
                Low tide window
              </span>
              <span
                class="relative z-10 ml-auto hidden gap-2 px-2 text-[10px] leading-tight text-medium/50 whitespace-nowrap sm:flex"
              >
                <span>
                  Wind NE 6 mph
                </span>
                <span>
                  Swell SSW @ 15s
                </span>
                <span>
                  Tide 0.7 ft Filling in
                </span>
              </span>
            </div>
            <span
              class="w-16 shrink-0 whitespace-nowrap text-right text-sm font-semibold text-high flex items-center"
              data-testid="primary-wave-height"
            >
              2-3 ft
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TodaysWindows normalizes broad raw ranges and keeps wave, wind, swell, and tide scannable 1`] = `
<div>
  <div>
    <div
      class="mb-3 flex items-center justify-between"
    >
      <h2
        class="flex items-center gap-1.5 font-heading text-lg font-semibold text-white"
      >
        Today's Windows
        <svg
          class="lucide lucide-info h-3.5 w-3.5 cursor-help text-muted-foreground"
          data-state="closed"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </h2>
    </div>
    <div
      class="noise-texture rounded-xl border border-[#404C92] bg-[#2D357D] p-5"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="rounded-lg p-1"
        >
          <div
            class="flex items-center gap-3"
          >
            <span
              class="w-12 shrink-0 font-heading text-sm font-bold text-[#FDB84B]"
            >
              8am
            </span>
            <div
              class="relative flex min-w-0 flex-1 items-center h-7 overflow-hidden"
            >
              <div
                class="absolute inset-y-0 left-0 rounded-md bg-success/30 shadow-[0_0_12px_rgba(34,197,94,0.15)]"
                style="width: 80%;"
              />
              <span
                class="relative z-10 min-w-0 truncate px-2 text-xs font-semibold text-white"
              >
                Morning glass
              </span>
              <span
                class="relative z-10 ml-auto hidden gap-2 px-2 text-[10px] leading-tight text-medium/50 whitespace-nowrap sm:flex"
              >
                <span>
                  Wind NW 8 mph
                </span>
                <span>
                  Swell WNW @ 14s
                </span>
                <span>
                  Tide 3.2 ft Rising
                </span>
              </span>
            </div>
            <span
              class="w-16 shrink-0 whitespace-nowrap text-right text-sm font-semibold text-high flex items-center"
              data-testid="primary-wave-height"
            >
              3ft
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
